# modules/auth/auth_models.go
@@ -5,6 +5,9 @@ import "time"
 type User struct {
 	ID        uint      `gorm:"primaryKey" json:"id"`
 	Email     string    `gorm:"unique" json:"email"`
-	Password  string    `json:"-"`
+	Name      string    `json:"name"`
+	Phone     string    `json:"phone"`
+	Address   string    `json:"address"`
+	Password  string    `gorm:"column:password_hash" json:"-"`
 	CreatedAt time.Time `json:"created_at"`
 }
